--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,7 @@ main {
 }
 
 .color-bg {
-  background: no-repeat url("/src/assets/images/bg-main-desktop.png");
+  background: no-repeat url("/src/assets/images/bg-main.png");
   background-size: cover;
   display: flex;
   flex: 1;
@@ -22,6 +22,21 @@ main {
    display: flex;
    justify-content: center;
    align-items: center;
+   flex-direction: column;
+   padding: 0 3rem;
+}
+
+.form-messages {
+  color: red;
+  width: 100%;
+  text-align: center;
+}
+
+.form-container { 
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card-container {
@@ -31,5 +46,7 @@ main {
   justify-content: center;
   flex: 1;
 };
+
+
 
 
