--- a/frontend/src/components/CardForm.css
+++ b/frontend/src/components/CardForm.css
@@ -2,7 +2,7 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem; 
+    gap: 1rem;
     padding: 1rem 0rem;
     width: 400px;
 }
@@ -17,15 +17,12 @@ label {
     display: flex;
     justify-content: space-between;
     gap: 2rem;
+    align-items: center;
 }
 
 .expiration-date-container {
     display: flex;
     gap: 1rem;
-}
-
-.expiration-cvv-container {
-    text-align: center;
 }
 
 .expiration-cvv-container input {
@@ -38,9 +35,8 @@ label {
 
 button {
     width: 150px;
-    background: no-repeat url("/src/assets/images/bg-main-desktop.png");
+    background: no-repeat url("/src/assets/images/bg-main.png");
     color: white;
     border-radius: .5rem;
     font-size: 1rem;
 }
-
